--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TOKEN_KEY=z3q*N9-U+WgIj"Tm6,z2H-VD+3DIi}
 DB_HOST=mongodb+srv://root:UNgMfMWNPIPTtDJK@cluster0.w3kwpot.mongodb.net/sy?retryWrites=true&w=majority
 PORT=3001
+META_PASS=40123qazw--Meta
