--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gravatar": "^1.8.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.3"
+    "mongoose": "^7.5.3",
+    "nodemailer": "^6.9.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
